fix Loading z-index

--- a/src/components/Loading.scss
+++ b/src/components/Loading.scss
@@ -79,7 +79,7 @@ $danger: rgba(220, 53, 69, 0.7);
       }
     }
   }
-  z-index: 9999;
+  z-index: 10001;
   display: none;
   justify-content: center;
   align-items: center;
